<resources>
    <string name="app_name">NotAlone</string>
    <string name="user_name">Insert username</string>
    <string name="password">Type password</string>
    <string name="forgot_password">I forgot password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="use_guest_user">Use guest user</string>
    <string name="guest">guest</string>
    <string name="DialogUserIncorrect">"Username or Password Incorrect"</string>
    <string name="connecting">Connecting....</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="DialogUserGuest">If you do login with the guest user you won\'t can create activities or join into activities</string>
    <string name="email">Type your email</string>
    <string name="phone">Type your phone</string>
    <string name="seePassword">See password</string>
    <string name="DialogUserExists">User already exists</string>
    <string name="createAccount">Create Account</string>
    <string name="createAccountUserExists">Username already exists</string>
    <string name="location_request">Location permission is required to show nearby activities</string>
    <string name="location_request_denied">It is not possible to access the location of the device. All application features will not be active</string>
    <string name="errorLocation">Location permission not available</string>
    <string name="connection_error">Error connecting server!!</string>
    <string name="DialogCreateUserIncorrect">Error during user creation. Repeat please</string>
    <string name="tab1">SEARCH</string>
    <string name="tab2">MY ACTIVITIES</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="rollerblading">Rollerblading</string>
    <string name="cycling">Cycling</string>
    <string name="tennis">Tennis</string>
    <string name="trekking">Trekking</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="set_tittle">Insert Activity\'s Name</string>
    <string name="date">Date</string>
    <string name="set_calendar">Click to select Date</string>
    <string name="set_position">Click to set the Start Activity Position</string>
    <string name="set_description">Insert Activity Description</string>
    <string name="nocreateUserGuest">I\'snt possible create new activity with Guest User</string>
    <string name="DialogCreateActivityIncorrect">Error during activity creation. Retry again!</string>
    <string name="DialogCreateActivityCorrect">Activity Created!!!</string>
    <string name="load_adress">Loading address...</string>
    <string name="confirm_position">Confirm Position</string>
    <string name="get_calendar">Scheduled Data</string>
    <string name="get_tittle">Activity\'s Tittle</string>
    <string name="get_position">Activity\'s beginning Location</string>
    <string name="get_description">Activity\'s Description</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="select_app">Select App</string>
    <string name="DialogJoinActivityIncorrect">Error during Join/Leave activity</string>
    <string name="user_password_empty">User or password are empty</string>
    <string name="not_network">Network is not available. Turn on Network!!</string>
    <string name="users">Users</string>
    <string name="owner">Owner</string>
    <string name="no_join_guest">Is not possible join an activity with Guest User</string>
    <string name="action_logout">Logout</string>
    <string name="action_aboutus">About us</string>
    <string name="acerca_de">carponcal
    carponcal@gmail.com</string>
    <string name="waiting_location">Waiting Location</string>
    <string name="select_date">Click to select date</string>
    <string name="select_location">Click to select location</string>


</resources>
