<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_places"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:orderInCategory="11"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:orderInCategory="13"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item android:id="@+id/action_aboutus"
        android:orderInCategory="12"
        android:title="@string/action_aboutus"
        app:showAsAction="never"/>
</menu>